--- a/css/contentsStyle.css
+++ b/css/contentsStyle.css
@@ -15,3 +15,18 @@
     width:33.33%;
     padding: 15px;
 }
+
+.abt_img{
+    width: 40%;
+    float: left;
+}
+
+img{
+    margin: 10px;
+}
+
+@media screen and (max-width: 800px) {
+    .content, .sidebar, .abt_img{
+        width: 100%;
+    }
+}
