created function to return input validation

--- a/css/contentsStyle.css
+++ b/css/contentsStyle.css
@@ -30,3 +30,17 @@ img{
         width: 100%;
     }
 }
+
+.invalid{
+    color: rgb(255, 0, 0);
+    font-size: smaller;
+}
+
+
+
+.invalid-feedback{
+	color: #500203;
+	}
+.valid-feedback{
+	color: #223d00;
+	}
